# LocalEnhance

./: .gitmodules  BUILD_STEPS.md  README.md
.github/workflows/: build.yml
ZoomEnhance/: settings.gradle.kts
ZoomEnhance/app/: build.gradle.kts
ZoomEnhance/app/src/main/: AndroidManifest.xml
ZoomEnhance/app/src/main/java/com/example/zoomenhance/: NativeLib.kt
ZoomEnhance/app/src/main/java/com/example/zoomenhance/ui/theme/: Color.kt  Theme.kt  Type.kt
ZoomEnhance/app/src/main/res/drawable/: ic_launcher_foreground.xml
ZoomEnhance/app/src/main/res/values/: strings.xml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/zoomenhance/: MainActivity.kt
app/src/main/java/com/example/zoomenhance/data/: ModelManager.kt
app/src/main/java/com/example/zoomenhance/ui/screens/: DownloadScreen.kt  EnhanceScreen.kt  SettingsScreen.kt
app/src/main/res/values/: themes.xml
